# FlutterReflect

./: .auto-claude-security.json  .auto-claude-status  .claude_settings.json  .gitignore  CLAUDE_CODE_INTEGRATION.md  CLI_MODE_IMPLEMENTATION.md  CMakeLists.txt  HELP_IMPROVEMENTS_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  PHASES_4_6_SUMMARY.md  PHASE_1_2_3_COMPLETE.md  README.md  TEST_GUIDE_BY_TOOL.md  TEST_SUMMARY.txt  USAGE_GUIDE.md  VISUAL_STUDIO_GUIDE.md  build_debug.bat  build_log.txt  build_output.txt  build_release.bat  clean.bat  generate_project_files.bat  generate_vs2022.bat  generate_vs_solution.bat  pytest.ini  run_tests.bat  test_complete_autonomous.py  test_comprehensive_suite.py  test_connect.json  test_debug_logs.py  test_deep_tree.py  test_get_tree.py  test_inspector_api.py  test_list_instances.py  test_mcp.py  test_phase_1_2.py  test_phase_3_autodiscovery.py  test_phases_4_6.py  test_raw_json.py  test_realistic_gui_suite.py  (+1 more)
.auto-claude/: project_index.json
.auto-claude/specs/001-create-realistic-test-cases/: MANUAL_TEST_PLAN.md  build-progress.txt  complexity_assessment.json  context.json  implementation_plan.json  init.sh  project_index.json  qa_report.md  requirements.json  review_state.json  spec.md  task_logs.json  task_metadata.json
.auto-claude/specs/001-create-realistic-test-cases/memory/: attempt_history.json  build_commits.json
.auto-claude/specs/001-create-realistic-test-cases/memory/session_insights/: session_001.json  session_002.json  session_003.json  session_004.json  session_005.json  session_006.json  session_007.json  session_008.json  session_009.json  session_010.json  session_011.json  session_012.json  session_013.json  session_014.json  session_015.json  session_016.json  session_017.json
docs/: AUTONOMOUS_WORKFLOW.md  BATCH_SCRIPTS.md  HELP_OUTPUT_IMPROVEMENTS.md  PHASE2_COMPLETE.md  QA_FIXES_SUMMARY.md  RUNTIME_VALIDATION_GUIDE.md  SUBTASK-3-1-SUMMARY.md  SUBTASK-4-4-SUMMARY.md  TEST_REPORT_COMPREHENSIVE.md  WINDOWS_APP_LAUNCH_REPORT.md  realistic_test_report.md
examples/: simple_connect.cpp
examples/flutter_sample_app/: README.md  analysis_options.yaml  pubspec.yaml
examples/flutter_sample_app/lib/: main.dart
examples/flutter_sample_app/lib/models/: todo_model.dart
examples/flutter_sample_app/lib/screens/: home_screen.dart  stats_screen.dart
examples/flutter_sample_app/lib/utils/: constants.dart
examples/flutter_sample_app/lib/widgets/: filter_bar.dart  interaction_log.dart  todo_item_widget.dart
include/flutter/: app_launcher.h  instance_discovery.h  interaction.h  selector.h  vm_service_client.h  widget_inspector.h  widget_tree.h
include/jsonrpc/: handler.h  message.h
include/mcp/: server.h  tool.h  transport.h  types.h
include/tools/: connect_tool.h  get_tree_tool.h
src/: main.cpp
src/flutter/: app_launcher.cpp  instance_discovery.cpp  interaction.cpp  selector.cpp  selector_matcher.cpp  selector_parser.cpp  vm_service_client.cpp  widget_inspector.cpp  widget_tree.cpp
src/jsonrpc/: handler.cpp  message.cpp
src/mcp/: server.cpp  stdio_transport.cpp  tool_registry.cpp
src/tools/: connect_tool.cpp  find_tool.cpp  get_properties_tool.cpp  get_property_tool.cpp  get_tree_tool.cpp  launch_tool.cpp  list_instances_tool.cpp  query_tool.cpp  screenshot_tool.cpp  scroll_tool.cpp  tap_tool.cpp  type_tool.cpp  wait_tool.cpp
tests/: conftest.py  test_connect.py  test_find.py  test_get_properties.py  test_get_tree.py  test_integration.py  test_mcp_protocol.py  test_tap.py  test_type.py
tests/flutter/: selector_test.cpp
tests/jsonrpc/: message_test.cpp
